--- a/Editor/Test/project1.lpi
+++ b/Editor/Test/project1.lpi
@@ -17,6 +17,10 @@
       <EnableI18N LFM="False"/>
     </i18n>
     <VersionInfo>
+      <UseVersionInfo Value="True"/>
+      <AutoIncrementBuild Value="True"/>
+      <RevisionNr Value="1"/>
+      <BuildNr Value="25"/>
       <StringTable ProductVersion=""/>
     </VersionInfo>
     <BuildModes Count="3">
