--- a/Editor/Test/project1.lpi
+++ b/Editor/Test/project1.lpi
@@ -111,7 +111,7 @@
         <PackageName Value="LCL"/>
       </Item3>
     </RequiredPackages>
-    <Units Count="8">
+    <Units Count="9">
       <Unit0>
         <Filename Value="project1.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -157,6 +157,11 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="CodeFormatter"/>
       </Unit7>
+      <Unit8>
+        <Filename Value="..\tooltip.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="ToolTip"/>
+      </Unit8>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
