--- a/Editor/Test/project1.lpi
+++ b/Editor/Test/project1.lpi
@@ -166,6 +166,7 @@
         <Filename Value="..\formeditor.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="FormEditFrame"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Frame"/>
         <UnitName Value="FormEditor"/>
       </Unit9>
