--- a/IDE/AALIDE.lpi
+++ b/IDE/AALIDE.lpi
@@ -28,12 +28,15 @@
         <FormatVersion Value="1"/>
       </local>
     </RunParams>
-    <RequiredPackages Count="1">
+    <RequiredPackages Count="2">
       <Item1>
-        <PackageName Value="LCL"/>
+        <PackageName Value="LazControls"/>
       </Item1>
+      <Item2>
+        <PackageName Value="LCL"/>
+      </Item2>
     </RequiredPackages>
-    <Units Count="4">
+    <Units Count="5">
       <Unit0>
         <Filename Value="AALIDE.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -59,6 +62,13 @@
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="IDEStartupScreen"/>
       </Unit3>
+      <Unit4>
+        <Filename Value="Forms\projectinspector.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="ProjectInspector"/>
+        <ResourceBaseClass Value="Frame"/>
+        <UnitName Value="ProjectInspector"/>
+      </Unit4>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
