--- a/IDE/AALIDE.lpi
+++ b/IDE/AALIDE.lpi
@@ -66,6 +66,7 @@
         <Filename Value="Forms\projectinspector.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="ProjectInspector"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Frame"/>
         <UnitName Value="ProjectInspector"/>
       </Unit4>
