--- a/IDE/AALIDE.lpi
+++ b/IDE/AALIDE.lpi
@@ -9,7 +9,9 @@
       <Title Value="AALIDE"/>
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
-      <Icon Value="0"/>
+      <XPManifest>
+        <DpiAware Value="True"/>
+      </XPManifest>
     </General>
     <i18n>
       <EnableI18N LFM="False"/>
@@ -39,7 +41,7 @@
         <PackageName Value="LCL"/>
       </Item3>
     </RequiredPackages>
-    <Units Count="13">
+    <Units Count="14">
       <Unit0>
         <Filename Value="AALIDE.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -81,6 +83,7 @@
       <Unit6>
         <Filename Value="..\Utils\listrecords.pas"/>
         <IsPartOfProject Value="True"/>
+        <UnitName Value="ListRecords"/>
       </Unit6>
       <Unit7>
         <Filename Value="..\Editor\codeformatter.pas"/>
@@ -89,13 +92,18 @@
       <Unit8>
         <Filename Value="..\Editor\editor.pas"/>
         <IsPartOfProject Value="True"/>
+        <ComponentName Value="EditorFrame"/>
         <HasResources Value="True"/>
+        <ResourceBaseClass Value="Frame"/>
         <UnitName Value="Editor"/>
       </Unit8>
       <Unit9>
         <Filename Value="..\Editor\formeditor.pas"/>
         <IsPartOfProject Value="True"/>
+        <ComponentName Value="FormEditFrame"/>
         <HasResources Value="True"/>
+        <ResourceBaseClass Value="Frame"/>
+        <UnitName Value="FormEditor"/>
       </Unit9>
       <Unit10>
         <Filename Value="..\Editor\tooltip.pas"/>
@@ -109,6 +117,13 @@
         <Filename Value="..\Highlighter\aalhighlighter.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit12>
+      <Unit13>
+        <Filename Value="Forms\editormanagerframe.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="EditorManager"/>
+        <ResourceBaseClass Value="Frame"/>
+        <UnitName Value="EditorManagerFrame"/>
+      </Unit13>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
