--- a/IDE/AALIDE.lpi
+++ b/IDE/AALIDE.lpi
@@ -19,7 +19,7 @@
     <VersionInfo>
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
-      <BuildNr Value="23"/>
+      <BuildNr Value="25"/>
       <Language Value="0407"/>
       <StringTable ProductVersion=""/>
     </VersionInfo>
@@ -109,7 +109,7 @@
         <PackageName Value="LCL"/>
       </Item3>
     </RequiredPackages>
-    <Units Count="15">
+    <Units Count="16">
       <Unit0>
         <Filename Value="AALIDE.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -199,6 +199,11 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="AALFileInfo"/>
       </Unit14>
+      <Unit15>
+        <Filename Value="..\Editor\formeditcomponents.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="FormEditComponents"/>
+      </Unit15>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
