--- a/IDE/AALIDE.lpi
+++ b/IDE/AALIDE.lpi
@@ -16,11 +16,11 @@
     <VersionInfo>
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
-      <RevisionNr Value="1"/>
-      <BuildNr Value="4"/>
+      <RevisionNr Value="2"/>
+      <BuildNr Value="6"/>
       <Language Value="0407"/>
       <Attributes pvaPreRelease="True"/>
-      <StringTable Comments="AALIDE Alpha 0.0.1" FileDescription="IDE for AAL automation language" LegalCopyright="Copyright (c) Frederic Kehrein 2016" ProductVersion="0.0.1 Alpha"/>
+      <StringTable Comments="AALIDE Alpha 0.0.2" FileDescription="IDE for AAL automation language" LegalCopyright="Copyright (c) F. Kehrein 2016" ProductVersion="0.0.2 Alpha"/>
     </VersionInfo>
     <BuildModes Count="3">
       <Item1 Name="Default" Default="True"/>
@@ -221,6 +221,7 @@
         <Filename Value="Forms\editoroptions.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="EditorConf"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="EditorOptions"/>
       </Unit18>
@@ -228,6 +229,7 @@
         <Filename Value="Forms\formeditoroptions.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="FormEditorOptionsForm"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="FormEditorOptions"/>
       </Unit19>
