--- a/IDE/AALIDE.lpi
+++ b/IDE/AALIDE.lpi
@@ -108,7 +108,7 @@
         <PackageName Value="LCL"/>
       </Item3>
     </RequiredPackages>
-    <Units Count="20">
+    <Units Count="21">
       <Unit0>
         <Filename Value="AALIDE.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -233,6 +233,13 @@
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="FormEditorOptions"/>
       </Unit19>
+      <Unit20>
+        <Filename Value="Forms\sampeprojectview.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="SampleForm"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="SampeProjectView"/>
+      </Unit20>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
